--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>🌌🏀</title>
     <style>
-      html, body, #three {
+      html, body, #render {
         margin: 0;
         width: 100%;
         height: 100%;
@@ -12,7 +12,7 @@
     </style>
   </head>
   <body>
-    <div id="render"></div>
+    <div id="sceneContainer"></div>
     <script src="./dimlit.js"></script>
   </body>
 </html>
