Get a cool JSX version working

--- a/public/index.html
+++ b/public/index.html
@@ -3,16 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>🌌🏀</title>
-    <style>
-      html, body, #render {
-        margin: 0;
-        width: 100%;
-        height: 100%;
-      }
-    </style>
     <script src="./dimlit.js"></script>
   </head>
-  <body>
-    <div id="sceneContainer"></div>
-  </body>
+  <body></body>
 </html>
